made index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>MyJsStory</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <h1>Welcome....</h1>
+
+    <h3>Sign Up</h3>
+
+    <form action="/register" method="post">
+
+      <input type="text" name="username" placeholder="username">
+      <input type="text" name="email" placeholder="email">
+      <input type="text" name="name" placeholder="name">
+      <input type="password" name="password" placeholder="password">
+    </form>
+
+    <h3>Login</h3>
+    <form action="/login" method="post">
+      <input type="text" name="username" placeholder="username">
+      <input type="password" name="password" placeholder="password">
+    
+    </form>
+   
+
   </body>
 </html>
