--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,190 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Montserrat&display=swap);
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+html,body{
+  width: 100%;
+  height: 100%;
+}
+
+#background{
+  widows: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+
+}
+
+nav{
+  width: 100%;
+  height: 10%;
+  padding: 0px 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.logo{
+  width: 10%;
+  height: 100%;
+  
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.logo .img{
+  width: 60px;
+  height: 60px;
+  
+  background-image: url('../images/icons8-laptop-coding-64.png');
+  background-size: cover;
+  
+}
+
+.logo .title{
+  color: black;
+  margin-top: 5px;
+  font-size: 13px;
+}
+
+
+.side-button{
+  width: 30%;
+  height: 100%;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+.side-button a{
+
+  width: 120px;
+  height: 40px;
+  border: 1px solid #2DCCCC;
+
+  border-radius: 30px;
+  text-align: center;
+  line-height: 40px;
+  text-decoration: none;
+  color: #2DCCCC;
+  outline: none;
+
+}
+
+.side-button p{
+  width: 150px;
+ font-size: 13px;
+}
+
+#main{
+  width: 100%;
+  height: 45%;
+  
+  
+  
+  
+}
+#main .content{
+  width: 100%;
+  height: 100%;
+  
+  
+}
+
+
+.main-content{
+  width: 100%;
+  height: 150px;
+  
+}
+
+.main-content p{
+  font-size: 13px;
+  font-weight: 100;
+  margin-top: 10px;
+}
+.main-content a{
+  
+  width: 120px;
+  height: 40px;
+  background: linear-gradient(to bottom, #2DCCCC, #CB82DD);
+  display: block;
+  margin-top: 20px;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 40px;
+  text-decoration: none;
+  color: #ffffff;
+  outline: none;
+}
+
+.imhage{
+  position: absolute;
+  z-index: -1000;
+  width: 40%;
+  height: 60%;
+  top: 14.3%;
+  right: 3%;
+  background: url('../images/undraw_code_typing_7jnv\ \(3\).png');
+  background-size: cover;
+  background-position: bottom;
+  animation-name: tilt;
+  animation-duration: 5s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: infinite;
+ 
+  
+}
+
+#main .content{
+  width: 40%;
+  height: 100%;
+  
+  margin-left: 80px;
+  display: flex;
+  
+  align-items: center;
+  
+}
+
+#bottom{
+  width: 100%;
+  height: 40%;
+  background-image: url('../images/Path\ 1.png');
+  background-size: cover;
+}
+
+@keyframes tilt{
+  0%{
+    transform: rotate(0deg);
+  }
+  25%{
+    transform: rotate(5deg);
+  }
+  50%{
+    transform: rotate(0deg);
+  }
+  75%{
+    transform: rotate(-3deg);
+  }
+  100%{
+    transform: rotate(0deg);
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .imhage{
+    display: none;
+  }
 }
