--- a/views/storyForm.ejs
+++ b/views/storyForm.ejs
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/login.css">
 </head>
 <body>
-    <form action="/story" method="post">
+    <div id="background">
+        <div id="formy">
+                <form action="/story" method="post">
     
-        <input type="text" name="description" placeholder="Description">
-        <input type="text" name="youtubechannel" placeholder="youtube channel you followed">
-        <input type="text" name="blogs" placeholder="blogs">
-        <input type="text" name="books" placeholder="books">
-        <input type="text" name="mentors" placeholder="mentors">
-        <input type="text" name="courses" placeholder="courses">
-        <input type="text" name="conclusion" placeholder="conclusion">
-        <input type="submit" value="share">
-    
-    </form>
+                    <input type="text" name="description" placeholder="Description"><br><br>
+                    <input type="text" name="youtubechannel" placeholder="youtube channel you followed"><br><br>
+                    <input type="text" name="blogs" placeholder="blogs"><br><br>
+                    <input type="text" name="books" placeholder="books"><br><br>
+                    <input type="text" name="mentors" placeholder="mentors"><br><br>
+                    <input type="text" name="courses" placeholder="courses"><br><br>
+                    <input type="text" name="conclusion" placeholder="conclusion"><br><br>
+                    <input type="submit" value="share">
+                
+                </form>
+        </div>
+    </div>
 </body>
 </html>
