--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/stylesheets/loginSignup.css">
     <title>Story|login</title>
 </head>
 <body>
-        <h3>Login</h3>
-        <form action="/login" method="post">
-          <input type="text" name="username" placeholder="username">
-          <input type="password" name="password" placeholder="password">
-          <input type="submit" value="login">
-        
-        </form>
+        <div id="background">
+          <div id="formy">
+              <form action="/login" method="post"><br><br>
+                <input type="text" name="username" placeholder="username"><br><br>
+                <input type="password" name="password" placeholder="password"><br><br><br>
+                <input type="submit" value="login">
+              
+              </form>
+          </div>
+          
+       
+        </div>
     
 </body>
 </html>
